json data added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,11 @@ main .row:first-of-type {
   padding-left: 50%;
 }
 
+section{
+  padding: 5rem 9%;
+  background-color: bisque;
+}
+
 // Some styling for photos
 // the height in viewports widths
 // helps keeping nice proportions
