--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,13 +11,40 @@ main .row:first-of-type {
   margin-top: 80px;
 }
 
-.input-group{
+.input-group {
   padding-left: 50%;
 }
 
-section{
+section {
   padding: 5rem 9%;
   background-color: bisque;
+}
+
+.hovering-box {
+  position: relative;
+  width: 50%;
+}
+
+.overlay {
+  position: absolute;
+  padding: 0rem 1rem 0rem 1rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #9d54f6;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.hovering-box:hover .overlay {
+  height: 80%;
+
+}
+
+.img-fluid {
+  padding: 15px 0 15px 0;
 }
 
 // Some styling for photos
