shopping cart added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,26 @@ main .row:first-of-type {
   padding-left: 50%;
 }
 
+.allBooks {
+  background-color: #0b0913;
+}
+
+.modal-content {
+  background-color: #792d2d;
+}
+
+.modal-header {
+  background-color: #4c2ecf;
+}
+
+.modal-body {
+  background-color: #4298b9;
+}
+
+.modal-footer {
+  background-color: #3ea164;
+}
+
 section {
   padding: 5rem 9%;
   background-color: bisque;
