book descriptions added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,23 +16,23 @@ main .row:first-of-type {
 }
 
 .allBooks {
-  background-color: #0b0913;
+  background-color: #1c2b5caf;
 }
 
 .modal-content {
-  background-color: #792d2d;
+  background-color: #1c2b5caf;
 }
 
 .modal-header {
-  background-color: #4c2ecf;
+  background-color: #1c2b5c;
 }
 
 .modal-body {
-  background-color: #4298b9;
+  background-color: #f0f0f0af;
 }
 
 .modal-footer {
-  background-color: #3ea164;
+  background-color: #1c2b5cbb;
 }
 
 section {
